spacing issue

--- a/app/client/src/styles/styles.less
+++ b/app/client/src/styles/styles.less
@@ -8,58 +8,26 @@
 @import "components/message-input";
 
 * {
-	box-sizing: border-box;
-	-webkit-tap-highlight-color: rgba(255,255,255,0) !important;
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: rgba(255,255,255,0) !important;
 
-	&:focus {
-		outline: none;
-	}
+  &:focus {
+    outline: none;
+  }
 }
 
 html {
-	font-family: @font-main;
-	color: @color-grey-very-dark;
-	background-color: @color-grey-very-light;
+  font-family: @font-main;
+  color: @color-grey-very-dark;
+  background-color: @color-grey-very-light;
 }
 
 body {
-	margin: 0;
+  margin: 0;
 }
 
 .content {
-	max-width: 1080px;
-	margin: 0 auto;
-	padding: 20px;
-}
-
-.button {
-	#button(@color: @color-green-dark, @important: false);
-
-	&.unimportant {
-		#button(@color: @color-blue, @important: false);
-	}
-
-	&.important {
-		#button(@background: @color-green);
-	}
-
-	&.warning {
-		#button(@background: @color-red);
-	}
-
-	&.disabled {
-		#button(@background: @color-grey, @hover: false);
-	}
-}
-
-.popup {
-	#popup();
-}
-
-.form-input {
-	#input();
-}
-
-.fa-close {
-	cursor: pointer;
+  max-width: 1080px;
+  margin: 0 auto;
+  padding: 20px;
 }
